--- a/build-as/pom.xml
+++ b/build-as/pom.xml
@@ -1024,6 +1024,11 @@
 
                 <dependency>
                     <groupId>org.jboss.as</groupId>
+                    <artifactId>jboss-as-version</artifactId>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.jboss.as</groupId>
                     <artifactId>jboss-as-web</artifactId>
                 </dependency>
 
