--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -128,6 +128,13 @@
 
         <dependency>
             <groupId>org.jboss.capedwarf.blue</groupId>
+            <artifactId>capedwarf-common</artifactId>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.capedwarf.blue</groupId>
             <artifactId>capedwarf-datastore</artifactId>
             <type>test-jar</type>
             <scope>test</scope>
