--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,6 @@
         <version.org.apache.lucene>3.6.1</version.org.apache.lucene>
         <version.org.bouncycastle>1.47</version.org.bouncycastle>
         <version.org.codehaus.exec>1.2.1</version.org.codehaus.exec>
-        <version.org.datanucleus>3.1.0-release</version.org.datanucleus>
-        <version.org.datanucleus.appengine>2.1.0-final</version.org.datanucleus.appengine>
-        <version.org.datanucleus.cache>3.1.0</version.org.datanucleus.cache>
-        <version.org.datanucleus.jdo>3.0</version.org.datanucleus.jdo>
-        <version.org.datanucleus.jta>1.1.1</version.org.datanucleus.jta>
         <version.org.hibernate.search>4.2.0.Beta1</version.org.hibernate.search>
         <version.org.infinispan>5.2.0.Beta2</version.org.infinispan>
         <version.org.jboss.jandex>1.0.3.Final</version.org.jboss.jandex>
@@ -46,6 +41,12 @@
         <version.arquillian>1.0.1.Final</version.arquillian>
         <version.shrinkwrap>1.1.0</version.shrinkwrap>
         <version.shrinkwrap.maven-resolver>2.0.0-alpha-4</version.shrinkwrap.maven-resolver>
+        <!-- DataNucleus -->
+        <version.org.datanucleus>3.1.2</version.org.datanucleus>
+        <version.org.datanucleus.appengine>2.1.1</version.org.datanucleus.appengine>
+        <version.org.datanucleus.cache>3.1.1</version.org.datanucleus.cache>
+        <version.org.datanucleus.jdo>3.0.1</version.org.datanucleus.jdo>
+        <version.org.datanucleus.jta>1.1.1</version.org.datanucleus.jta>
         <!-- Needs to be set explicitely to match with org.jacoco:org.jacoco.ant - see testsuite. -->
         <version.xml.maven.plugin>1.0</version.xml.maven.plugin>
         <!-- Maven plugins -->
