--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <version.org.jboss.capedwarf>1.0.0-SNAPSHOT</version.org.jboss.capedwarf>
         <!-- External deps -->
         <version.com.google.appengine>1.7.3</version.com.google.appengine>
+        <version.com.google.guava>11.0.2</version.com.google.guava>
         <version.org.apache.ant>1.8.2</version.org.apache.ant>
         <version.org.apache.lucene>3.6.1</version.org.apache.lucene>
         <version.org.bouncycastle>1.47</version.org.bouncycastle>
@@ -47,6 +48,12 @@
         <version.org.datanucleus.cache>3.1.1</version.org.datanucleus.cache>
         <version.org.datanucleus.jdo>3.0.1</version.org.datanucleus.jdo>
         <version.org.datanucleus.jta>1.1.1</version.org.datanucleus.jta>
+        <!-- Testing - MapReduce -->
+        <version.com.google.gae.mapper>r365</version.com.google.gae.mapper>
+        <version.charts4j>1.3</version.charts4j>
+        <version.commons-logging>1.1.1</version.commons-logging>
+        <version.org.apache.hadoop.core>0.20.2</version.org.apache.hadoop.core>
+        <version.org.json>20090211</version.org.json>
         <!-- Needs to be set explicitely to match with org.jacoco:org.jacoco.ant - see testsuite. -->
         <version.xml.maven.plugin>1.0</version.xml.maven.plugin>
         <!-- Maven plugins -->
@@ -425,6 +432,12 @@
             <!-- External Dependencies -->
 
             <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${version.com.google.guava}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.jboss.as</groupId>
                 <artifactId>jboss-as-arquillian-container-managed</artifactId>
                 <version>${version.jboss.as}</version>
@@ -672,6 +685,38 @@
                 <groupId>org.jboss.shrinkwrap.resolver</groupId>
                 <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
                 <version>${version.shrinkwrap.maven-resolver}</version>
+            </dependency>
+
+            <!-- Testing MapReduce -->
+
+            <dependency>
+                <groupId>com.google.appengine</groupId>
+                <artifactId>appengine-mapper</artifactId>
+                <version>${version.com.google.gae.mapper}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.googlecode.charts4j</groupId>
+                <artifactId>charts4j</artifactId>
+                <version>${version.charts4j}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-logging</groupId>
+                <artifactId>commons-logging</artifactId>
+                <version>${version.commons-logging}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.hadoop</groupId>
+                <artifactId>hadoop-core</artifactId>
+                <version>${version.org.apache.hadoop.core}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.json</groupId>
+                <artifactId>json</artifactId>
+                <version>${version.org.json}</version>
             </dependency>
 
             <!-- ARQ -->
