--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
         <module>embedded</module>
         <module>integrate-cd</module>
         <module>tests</module>
+        <module>tools</module>
     </modules>
 
     <dependencyManagement>
