--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -93,6 +93,13 @@
 
         <dependency>
             <groupId>org.jboss.capedwarf.blue</groupId>
+            <artifactId>capedwarf-common</artifactId>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.capedwarf.blue</groupId>
             <artifactId>capedwarf-tools</artifactId>
             <scope>test</scope>
         </dependency>
