--- a/pom.xml
+++ b/pom.xml
@@ -30,11 +30,16 @@
         <version.org.jboss.jandex>1.0.3.Final</version.org.jboss.jandex>
         <version.org.jboss.maven.transformer>1.0.0.Beta4</version.org.jboss.maven.transformer>
         <version.org.jivesoftware.smack>3.1.0</version.org.jivesoftware.smack>
+
         <version.org.picketbox>4.0.14.Final</version.org.picketbox>
         <version.org.picketbox.picketbox-commons>1.0.0.final</version.org.picketbox.picketbox-commons>
         <version.org.picketlink>2.1.4.Final</version.org.picketlink>
         <version.org.picketlink.consolidated.social>2.0.0.Beta1</version.org.picketlink.consolidated.social>
-        <version.org.openid4java>0.9.5</version.org.openid4java>
+        <version.org.openid4java>0.9.6</version.org.openid4java>
+        <version.org.apache.httpcomponents>4.0</version.org.apache.httpcomponents>
+        <version.net.sourceforge.nekohtml>1.9.10</version.net.sourceforge.nekohtml>
+        <version.com.google.code.guice>2.0</version.com.google.code.guice>
+
         <version.rhino.js>1.7R2</version.rhino.js>
         <version.javax.jpa2>1.0.1.Final</version.javax.jpa2>
         <version.org.jboss.spec.javax.servlet.api>1.0.0.Final</version.org.jboss.spec.javax.servlet.api>
@@ -606,13 +611,7 @@
                     </exclusion>
                 </exclusions>
             </dependency>
-
-            <dependency>
-                <groupId>org.openid4java</groupId>
-                <artifactId>openid4java-consumer</artifactId>
-                <version>${version.org.openid4java}</version>
-            </dependency>
-
+    
             <dependency>
                 <groupId>org.openid4java</groupId>
                 <artifactId>openid4java-nodeps</artifactId>
@@ -624,6 +623,30 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpclient</artifactId>
+				<version>${version.org.apache.httpcomponents}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpcore</artifactId>
+				<version>${version.org.apache.httpcomponents}</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>net.sourceforge.nekohtml</groupId>
+				<artifactId>nekohtml</artifactId>
+				<version>${version.net.sourceforge.nekohtml}</version>				
+			</dependency>
+
+			<dependency>
+				<groupId>com.google.code.guice</groupId>
+				<artifactId>guice</artifactId>
+				<version>${version.com.google.code.guice}</version>
+			</dependency>
 
             <dependency>
                 <groupId>org.picketbox</groupId>
