--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,11 @@
         <version.com.google.appengine>1.7.4</version.com.google.appengine>
         <version.com.google.guava>11.0.2</version.com.google.guava>
         <version.org.apache.ant>1.8.2</version.org.apache.ant>
-        <version.org.apache.lucene>3.6.1</version.org.apache.lucene>
+        <version.org.apache.lucene>3.6.2</version.org.apache.lucene>
         <version.org.bouncycastle>1.47</version.org.bouncycastle>
         <version.org.codehaus.exec>1.2.1</version.org.codehaus.exec>
-        <version.org.hibernate.search>4.2.0.Beta2</version.org.hibernate.search>
-        <version.org.infinispan>5.2.0.Beta5</version.org.infinispan>
+        <version.org.hibernate.search>4.2.0.CR1</version.org.hibernate.search>
+        <version.org.infinispan>5.2.0.Beta6</version.org.infinispan>
         <version.org.jboss.jandex>1.0.3.Final</version.org.jboss.jandex>
         <version.org.jboss.maven.transformer>1.0.0.Beta4</version.org.jboss.maven.transformer>
         <version.org.jivesoftware.smack>3.1.0</version.org.jivesoftware.smack>
